// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD iGJjMB"
    role="button"
  >
    <button
      class="sc-crXcEl sc-evZas uxtH fZBpGj sc-fnykZs bXWMiJ"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      Save
      <div
        class="sc-dkzDqf jjZmli"
      />
      <span
        class="sc-bczRLJ gJuzRf"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-kDDrLX hpAKIM"
  >
    <div
      class="sc-iqcoie gmscxm"
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="0"
    >
      <div
        class="sc-eCYdqJ iXNtov"
      >
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD iGJjMB"
    role="button"
  >
    <button
      class="sc-crXcEl sc-evZas uxtH ckZhbE sc-fnykZs bXWMiJ"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
    >
      Save
      <div
        class="sc-dkzDqf jjZmli"
      />
      <span
        class="sc-bczRLJ gJuzRf"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-kDDrLX dOunYY"
  >
    <div
      class="sc-papXJ eSILSt fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-jqUVSM fzMOaq"
      />
    </div>
    <div
      class="sc-iqcoie gmscxm"
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="0"
    >
      <div
        class="sc-eCYdqJ iXNtov"
      >
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD iGJjMB"
    role="button"
  >
    <button
      class="sc-crXcEl sc-evZas uxtH cbeqlQ sc-ksZaOG kkisyE"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      Save
    </button>
    <button
      class="sc-crXcEl sc-evZas uxtH cbeqlQ sc-hAZoDl dfufMf"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="normal"
    >
      <span
        class="sc-bczRLJ gJuzRf"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-kDDrLX hpAKIM"
  >
    <div
      class="sc-iqcoie gmscxm"
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="0"
    >
      <div
        class="sc-eCYdqJ iXNtov"
      >
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-breuTD iGJjMB"
    role="button"
  >
    <button
      class="sc-crXcEl sc-evZas uxtH cDOCgL sc-ksZaOG kkisyE"
      font-size="14px"
      font-weight="normal"
    >
      Save
    </button>
    <button
      class="sc-crXcEl sc-evZas uxtH cDOCgL sc-hAZoDl dfufMf"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="normal"
    >
      <span
        class="sc-bczRLJ gJuzRf"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-kDDrLX dOunYY"
  >
    <div
      class="sc-papXJ eSILSt fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-jqUVSM fzMOaq"
      />
    </div>
    <div
      class="sc-iqcoie gmscxm"
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="0"
    >
      <div
        class="sc-eCYdqJ iXNtov"
      >
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-gsnTZi ksTzsU"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-ftvSup ddlugd"
        >
          <p
            class="sc-hKMtZM kkYdqw sc-iBkjds"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
